--- a/frontend/src/components/Track_order/TrackingPage.css
+++ b/frontend/src/components/Track_order/TrackingPage.css
@@ -8,8 +8,8 @@ body{
 }
 .tracking_container{
     font-family: var(--my-font1);
-    overflow-y: scroll;
-    position: fixed;
+    /* overflow-y: scroll;
+    position: fixed; */
     height: 100vh;
     width:100%;
     display: flex;
